# whisperX-forked-30122024

./: .gitignore  check.py  extract_audio.py  hello.py  pyproject.toml  test1.py
